Issue #12381- fixed color contrast issue (#12384)
* Issue #12381- fixed color contrast issue

* Issue #12381 - fixed list in dropbuttons

--- a/profile/themes/os_base/scss/component/_button.scss
+++ b/profile/themes/os_base/scss/component/_button.scss
@@ -7,3 +7,19 @@
   background: $color-green;
   border-color: $color-green;
 }
+.btn-danger {
+  background: $color-danger;
+  border-color: $color-danger;
+}
+.btn-warning {
+  color: $color-black;
+  &:hover,&:active,&:focus {
+    color: $color-black;
+  }
+}
+.btn-info {
+  color: $color-black;
+  &:hover,&:active,&:focus {
+    color: $color-black;
+  }
+}
