--- a/profile/themes/os_base/scss/component/_widgtes.scss
+++ b/profile/themes/os_base/scss/component/_widgtes.scss
@@ -208,3 +208,14 @@
     }
   }
 }
+/**** widget dropbutton ****/
+.layout {
+  .paragraphs-dropbutton-wrapper {
+    .dropbutton {
+      li {
+        list-style-type: none;
+        margin-bottom: 3px;
+      }
+    }
+  }
+}
